# nmigen_sketches

./: .gitignore  README.md  breathing.py  led_panel.py  panel.py  pyproject.toml
addons/: led_panel.py
util/: dac.py  quarter_wave.py
